--- a/index.html
+++ b/index.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Simple HTML Project</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>My Simple Website</title>
 </head>
 <body>
-  <h1>Hello from GitHub Pages 🚀</h1>
-  <p>This site is deployed using GitHub Actions CI/CD.</p>
-
-  <button onclick="showMessage()">Click Me</button>
-
-  <script src="script.js"></script>
+  <h1>Hello 👋</h1>
+  <p>This page is hosted using GitHub Pages.</p>
 </body>
 </html>
