--- a/index.html
+++ b/index.html
@@ -1,10 +1,81 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Simple Website</title>
+  <title>🎉 Happy Birthday 🎉</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: "Segoe UI", Arial, sans-serif;
+      text-align: center;
+      background: linear-gradient(135deg, #ff9a9e, #fecfef);
+      color: #ffffff;
+    }
+
+    .container {
+      padding: 60px 20px;
+    }
+
+    h1 {
+      font-size: 60px;
+      margin-bottom: 10px;
+      animation: bounce 1.5s infinite;
+    }
+
+    h2 {
+      font-size: 28px;
+      font-weight: normal;
+    }
+
+    .flowers {
+      font-size: 60px;
+      margin: 30px 0;
+    }
+
+    .msg {
+      background: rgba(255,255,255,0.2);
+      padding: 20px;
+      border-radius: 15px;
+      max-width: 800px;
+      margin: auto;
+      font-size: 22px;
+      line-height: 1.6;
+    }
+
+    @keyframes bounce {
+      0% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+      100% { transform: translateY(0); }
+    }
+
+    .footer {
+      margin-top: 50px;
+      font-size: 18px;
+    }
+  </style>
 </head>
+
 <body>
-  <h1>Hello 👋</h1>
-  <p>This page is hosted using GitHub Pages.</p>
+  <div class="container">
+    <h1>🎂 HAPPY BIRTHDAY 🎂</h1>
+    <h2>Wishing you a day filled with joy, laughter and love 💖</h2>
+
+    <div class="flowers">
+      🌸🌼🌷🌺🌻💐🌹💮
+    </div>
+
+    <div class="msg">
+      🎉 May your birthday be as special, bright, and wonderful as you are!  
+      ✨ Wishing you happiness today and always.  
+      💖 Have an amazing year ahead full of success, smiles, and sweet memories!
+    </div>
+
+    <div class="flowers">
+      🎈🎉🎊🎁🎂🥳
+    </div>
+
+    <div class="footer">
+      Made with ❤️ just for you 💕
+    </div>
+  </div>
 </body>
 </html>
