--- a/index.html
+++ b/index.html
@@ -1,81 +1,163 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>🎉 Happy Birthday 🎉</title>
+  <title>My Product Showcase</title>
+
   <style>
     body {
       margin: 0;
-      font-family: "Segoe UI", Arial, sans-serif;
+      font-family: Arial, Helvetica, sans-serif;
+      background: #f5f6fa;
+      color: #333;
+    }
+
+    /* Header */
+    .header {
+      background: #4b7bec;
+      color: white;
+      padding: 40px;
       text-align: center;
-      background: linear-gradient(135deg, #ff9a9e, #fecfef);
-      color: #ffffff;
     }
 
-    .container {
-      padding: 60px 20px;
+    .header h1 {
+      margin: 0;
+      font-size: 45px;
     }
 
-    h1 {
-      font-size: 60px;
-      margin-bottom: 10px;
-      animation: bounce 1.5s infinite;
+    .header p {
+      font-size: 18px;
+      opacity: 0.9;
     }
 
-    h2 {
-      font-size: 28px;
-      font-weight: normal;
+    /* Products Section */
+    .section-title {
+      text-align: center;
+      margin: 40px 0 10px 0;
+      font-size: 30px;
     }
 
-    .flowers {
-      font-size: 60px;
+    .products {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 20px;
+      padding: 20px;
+    }
+
+    .card {
+      background: white;
+      width: 280px;
+      border-radius: 10px;
+      box-shadow: 0px 5px 15px rgba(0,0,0,0.1);
+      padding: 20px;
+      text-align: center;
+    }
+
+    .card img {
+      width: 100%;
+      border-radius: 10px;
+    }
+
+    .card h3 {
+      margin: 15px 0 5px 0;
+    }
+
+    .card p {
+      color: #555;
+    }
+
+    .btn {
+      display: inline-block;
+      background: #4b7bec;
+      color: white;
+      padding: 10px 18px;
+      text-decoration: none;
+      border-radius: 6px;
+      margin-top: 10px;
+    }
+
+    .btn:hover {
+      background: #3867d6;
+    }
+
+    /* Features Section */
+    .features {
+      background: white;
+      padding: 40px;
       margin: 30px 0;
     }
 
-    .msg {
-      background: rgba(255,255,255,0.2);
-      padding: 20px;
-      border-radius: 15px;
-      max-width: 800px;
+    .feature-list {
+      max-width: 900px;
       margin: auto;
-      font-size: 22px;
-      line-height: 1.6;
-    }
-
-    @keyframes bounce {
-      0% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
-      100% { transform: translateY(0); }
-    }
-
-    .footer {
-      margin-top: 50px;
+      line-height: 1.8;
       font-size: 18px;
+    }
+
+    /* Footer */
+    .footer {
+      background: #222;
+      color: white;
+      text-align: center;
+      padding: 15px;
+      margin-top: 20px;
     }
   </style>
 </head>
 
 <body>
-  <div class="container">
-    <h1>🎂 HAPPY BIRTHDAY 🎂</h1>
-    <h2>Wishing you a day filled with joy, laughter and love 💖</h2>
 
-    <div class="flowers">
-      🌸🌼🌷🌺🌻💐🌹💮
+  <!-- Header -->
+  <div class="header">
+    <h1>Welcome to My Product Store</h1>
+    <p>Your one-stop place for amazing products 🚀</p>
+  </div>
+
+  <!-- Product Section -->
+  <h2 class="section-title">📦 Our Products</h2>
+
+  <div class="products">
+
+    <div class="card">
+      <img src="https://via.placeholder.com/300x200" />
+      <h3>Product One</h3>
+      <p>Short description about the product goes here.</p>
+      <a class="btn" href="#">Learn More</a>
     </div>
 
-    <div class="msg">
-      🎉 May your birthday be as special, bright, and wonderful as you are!  
-      ✨ Wishing you happiness today and always.  
-      💖 Have an amazing year ahead full of success, smiles, and sweet memories!
+    <div class="card">
+      <img src="https://via.placeholder.com/300x200" />
+      <h3>Product Two</h3>
+      <p>Short description about the product goes here.</p>
+      <a class="btn" href="#">Learn More</a>
     </div>
 
-    <div class="flowers">
-      🎈🎉🎊🎁🎂🥳
+    <div class="card">
+      <img src="https://via.placeholder.com/300x200" />
+      <h3>Product Three</h3>
+      <p>Short description about the product goes here.</p>
+      <a class="btn" href="#">Learn More</a>
     </div>
 
-    <div class="footer">
-      Made with ❤️ just for you 💕
+  </div>
+
+  <!-- Features Section -->
+  <div class="features">
+    <h2 class="section-title">⭐ Features</h2>
+
+    <div class="feature-list">
+      ✓ High Quality Products <br>
+      ✓ Affordable Pricing <br>
+      ✓ Reliable & Trusted Service <br>
+      ✓ Fast Delivery 🚚 <br>
+      ✓ Customer Satisfaction Guaranteed 😊
     </div>
   </div>
+
+  <!-- Footer -->
+  <div class="footer">
+    © 2025 My Product Store | Contact: support@example.com
+  </div>
+
 </body>
 </html>
