updated contatc details

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
   <!-- Footer -->
   <div class="footer">
-    © 2025 My Product Store | Contact: support@example.com
+    © 2025 My Product Store | Contact: rajkumardasari77@gmail.com
   </div>
 
 </body>
