change code for images

--- a/index.html
+++ b/index.html
@@ -119,21 +119,21 @@
   <div class="products">
 
     <div class="card">
-      <img src="https://via.placeholder.com/300x200" />
+      <img src="images/product1.jpg" />
       <h3>Product One</h3>
       <p>Short description about the product goes here.</p>
       <a class="btn" href="#">Learn More</a>
     </div>
 
     <div class="card">
-      <img src="https://via.placeholder.com/300x200" />
+      <img src="images/product2.jpg" />
       <h3>Product Two</h3>
       <p>Short description about the product goes here.</p>
       <a class="btn" href="#">Learn More</a>
     </div>
 
     <div class="card">
-      <img src="https://via.placeholder.com/300x200" />
+      <img src="images/product3.jpg" />
       <h3>Product Three</h3>
       <p>Short description about the product goes here.</p>
       <a class="btn" href="#">Learn More</a>
